# zappy-log

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  example.cpp
include/zappy/: logger.hpp
include/zappy/details/: ansi.hpp  circular.hpp  common.hpp  core.hpp  fmt.hpp  json-scrambler.hpp  queue.hpp  rotating-file.hpp  stringers.hpp  terminal.hpp  worker.hpp
include/zappy/sinks/: console.hpp  file.hpp  func.hpp
